# worker-forge

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  design.md  electron-builder.cjs  electron.vite.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  worker.md
.claude/: CLAUDE.md
.design-sync/: NOTES.md  config.json  conventions.md
backend/: pyproject.toml  requirements-test.txt
build-assets/: entitlements.mac.plist  icon.icns
design/: README.md  app.jsx  data.js  icons.jsx  orchestrator-data.js  overlay-scroll.js  styles.css  tweaks.jsx  views-runs.jsx  views-settings.jsx  views-tasks.jsx  views-triggers.jsx  views-workflows.jsx  workflow orchestrator.html
docker/: backend.Dockerfile  docker-compose.test.yml  e2e.Dockerfile  frontend.Dockerfile
docs/: CLAUDE.md  design.md  spec.md  worker-forge-skill-supplement-spec.md
electron/: main.ts  preload.ts
engine/: pyproject.toml  requirements-dev.txt  requirements.txt  run.py  worker-forge-backend.spec
engine/app/: models.py  runner.py
engine/app/routes/: executions.py  triggers.py  workflows.py
engine/tests/: conftest.py
engine/tests/integration/: test_crash_recovery.py  test_health.py  test_settings_api.py
engine/tests/unit/: test_db.py  test_models.py  test_paths.py
scripts/: build-skill-dist.sh  build.sh  clean.sh  dev.sh  import-design.sh  lib-test.sh  make_icon.py  make_icon.sh  remove-data.sh  test-e2e.sh  test-integration.sh  test-unit.sh  test.sh
skills/: worker-forge.skill
src/: App.jsx  api.js  global.d.ts  (+6 more)
(+122 files in other folders)
