[project]
name = "worker-forge-backend"
version = "1.0.0"
description = "worker-forge workflow runner backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 90

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: spins up the FastAPI app / runs real subprocess steps",
]
